
Note: Changes marked [BULL] only take effect when the optional BUG DLL is installed.
      BULL features that don't require BUG are not listed here.


____________________________________________________________________________________________________
BUG 4.1.1 unreleased

CHANGES

New Features:

Improvements:

- Great Person Progress Bar
	Added hover text displaying full details

Bug Fixes:

- Customizable Domestic Advisor
	Fixed options on Advsors tab
	Fixed Zoom to City Button Details option title
- Mac
	Fixed reverse list sorting in GPUtil
- Added missing 3.19 change with liberating cities during wartime


MODDING

New Features:

Improvements:

Bug Fixes:


____________________________________________________________________________________________________
BUG 4.1 released September 29th, 2009

CHANGES

New Features:

- Mac support
- Scoreboard
	Added Civilization Description option (e.g. "English Empire")
- City Screen
	Added option to show only religions and corporations present in the city plus allows for more than seven of each
	If Fractional Trade Routes is enabled, shows two decimal places for Trade Route values [BULL]
- Foreign Advisor (F4)
	TECHS: Added a status column that shows War, Forced Peace, and Refuses to Talk
- Religion Advisor (F7)
	Added option to limit the religions shown in the top area to only those that are founded or available for conversion
	Added johny smith's scrolling panel for mods with more than seven religions
	Shows new religions and religious buildings/units types from mods
- Civ4lerts
	Added Refuses to Talk alert
	Added Worst Enemy alert
	Added Resource Trade alert
	Added Map Trade alert

Improvements:

- Scoreboard
	Refuses to Talk now works without BULL
- Customizable Domestic Advisor (F1)
	Added hover help text to buttons
- MapFinder
	Added ALT + CTRL + SHIFT + G to stop
	Added separate Save path

Bug Fixes:

- BUFFY and Single-Player BUG can coexist; set NoCustomAssets to 1 in BUFFY's INI file
- Main Interface